--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,18 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.tmatesoft.svnkit</groupId>
+    	<artifactId>svnkit</artifactId>
+    </dependency>
   </dependencies>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.tmatesoft.svnkit</groupId>
+  			<artifactId>svnkit</artifactId>
+  			<version>1.3.2-1</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
