--- a/pom.xml
+++ b/pom.xml
@@ -22,17 +22,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>org.tmatesoft.svnkit</groupId>
+    	<groupId>com.svnkit</groupId>
     	<artifactId>svnkit</artifactId>
+    	<version>1.1.0</version>
     </dependency>
   </dependencies>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>org.tmatesoft.svnkit</groupId>
-  			<artifactId>svnkit</artifactId>
-  			<version>1.3.2-1</version>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
 </project>
